# rust-axum-course

./: Cargo.toml  README.md
src/: ctx.rs  error.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
