[package]
name = "rust-axum-course"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Axum
axum = "0.6.16"
tower-http = { version = "0.4", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
